修复docker打包错误